--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
 
-  <title>Portfolio</title>
+  <title>Xuan Long</title>
 </head>
 
 <body>
